# KnowledgeRepSeasonTwo

./: Pipfile  README.md  admissable_decision.sh  credulous_decision_preferred.sh  game.sh  pyproject.toml
argumentation_game/: ArgumentGraph.py  __main__.py  run.py
data/: amsterdam.json  example-argumentation-framework.json  example3.json
src/argumentation_game/: __init__.py  __main__.py  argument.py  argument_graph.py  game.py  labeling.py  recursive_shenanigans.py  run.py
tests/: helpers.py  test_admissable.py  test_part_two.py
tests/data/: example0.json  example1.json  example2.json
