[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argumentation_game"
version = "0.1.0"
authors = [{ name = "JJWRoeloffs", email = "jelleroeloffs@gmail.com" }]
description = "The code for the second assignment of the VU Knowledge Representation course"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true

pythonVersion = "3.11"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "src" }]
